@@ -3,6 +3,8 @@ Changelog
 
 5.1-dev - (unreleased)
 ----------------------
+* Bug fix: when creating a new assessment, properly copy the related items
+  [tiberich refs #5462]
 
 5.0 - (2012-07-13)
 ------------------
